Fix several Camel Jbang functionalities on Windows when classpath url is used
* Checking if the path starts with classpath: before using it with
Path.of
* Use Path.of instead of Paths.get as the javadoc is recommending it
this way

it allows to get down from 34 failures and 2 errors to 2 errors and 2
failures on Windows

for reference, the regression was introduced with
https://github.com/apache/camel/commit/e732f61286f69bd9aec5802cff8ececf51a78377

Signed-off-by: Aurélien Pupier <apupier@redhat.com>